--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Jigsaw Puzzle Game</title>
+  <title>Jigsaw Puzzle with LINE LIFF</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
 
 <h1>🧩 Jigsaw Puzzle</h1>
 <div id="timer">Time: 60s</div>
-
 <div id="board"></div>
-
 <div id="pieces"></div>
-
 <div id="message"></div>
+
+<!-- Exit button -->
+<button id="closeBtn">❌ Exit Game</button>
 
 <script src="script.js"></script>
 </body>
